force-app/main/default/objects/Onboarding__c/fields/Clinical_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Supervisor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Worker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Onboardings (Clinical Supervisor)</relationshipLabel>
    <relationshipName>Onboardings1</relationshipName>
    <type>Lookup</type>
</CustomField>