force-app/main/default/objects/Onboarding__c/fields/Contact_Apex_Run__c.field-meta.xml
<CustomField>
    <fullName>Contact_Apex_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Apex Run</label>
    <type>Checkbox</type>
</CustomField>