force-app/main/default/objects/Onboarding__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Occupational Therapy</fullName>
            </value>
            <value>
                <fullName>Speech Pathology</fullName>
            </value>
            <value>
                <fullName>Physiotherapy</fullName>
            </value>
            <value>
                <fullName>PBS</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Social Work</fullName>
            </value>
            <value>
                <fullName>Allied Health Assistant</fullName>
            </value>
            <value>
                <fullName>Exercise Physiology</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Psychology</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Learning &amp; Development</fullName>
            </value>
            <value>
                <fullName>Talent</fullName>
            </value>
            <value>
                <fullName>Team Leaders</fullName>
                <isActive>false</isActive>
                <label>Team Leaders</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>