force-app/main/default/objects/Onboarding__c/fields/Direct_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Direct_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direct Supervisor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Worker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Onboardings</relationshipLabel>
    <relationshipName>Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>