force-app/main/default/objects/Onboarding__c/fields/Direct_Supervisor_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Direct_Supervisor_s_Email__c</fullName>
    <formula>Direct_Supervisor__r.Email</formula>
    <label>Direct Supervisor&apos;s Email</label>
    <type>Text</type>
</CustomField>