force-app/main/default/objects/Onboarding__c/fields/FTE__c.field-meta.xml
<CustomField>
    <fullName>FTE__c</fullName>
    <label>FTE</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>