force-app/main/default/objects/Onboarding__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Intersex</fullName>
            </value>
            <value>
                <fullName>Declined to Answer</fullName>
            </value>
            <value>
                <fullName>Transgender</fullName>
            </value>
            <value>
                <fullName>Non-Binary</fullName>
            </value>
            <value>
                <fullName>Unknown/Did Not Share</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>