force-app/main/default/objects/Onboarding__c/fields/Internal_Banding__c.field-meta.xml
<CustomField>
    <fullName>Internal_Banding__c</fullName>
    <label>Internal Banding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>AHA Early Service</fullName>
            </value>
            <value>
                <fullName>AHA Full Service</fullName>
            </value>
            <value>
                <fullName>Allied Health Manager</fullName>
            </value>
            <value>
                <fullName>Business Relationship Officer</fullName>
            </value>
            <value>
                <fullName>Early Practicing Clinician</fullName>
            </value>
            <value>
                <fullName>Practicing Clinician</fullName>
            </value>
            <value>
                <fullName>Company Accountant</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Graduate Clinician</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>National Clinical Lead</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>Operations Manager</fullName>
            </value>
            <value>
                <fullName>PBS Specialist</fullName>
            </value>
            <value>
                <fullName>Principal Clinician</fullName>
            </value>
            <value>
                <fullName>Regional Manager</fullName>
            </value>
            <value>
                <fullName>Senior Clinician</fullName>
            </value>
            <value>
                <fullName>State Manager</fullName>
            </value>
            <value>
                <fullName>HR Senior Advisor</fullName>
            </value>
            <value>
                <fullName>Talent Manager</fullName>
            </value>
            <value>
                <fullName>Administrator Manager</fullName>
            </value>
            <value>
                <fullName>IT Manager</fullName>
            </value>
            <value>
                <fullName>Talent Specialist</fullName>
            </value>
            <value>
                <fullName>Marketing Manager</fullName>
            </value>
            <value>
                <fullName>IT Consultant</fullName>
            </value>
            <value>
                <fullName>Learning and Development Coordinator</fullName>
            </value>
            <value>
                <fullName>Content Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>