force-app/main/default/objects/Onboarding__c/fields/isTeamLeader__c.field-meta.xml
<CustomField>
    <fullName>isTeamLeader__c</fullName>
    <formula>IF( Role_Title__c = &quot;Team Leader&quot;, TRUE, FALSE)</formula>
    <label>isTeamLeader</label>
    <type>Checkbox</type>
</CustomField>