force-app/main/default/objects/Onboarding__c/fields/Laptop_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Serial_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Laptop Serial Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>IT_Asset__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Laptop</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>IT_Asset__c</referenceTo>
    <relationshipLabel>Onboardings (IT Asset (Laptop))</relationshipLabel>
    <relationshipName>Onboardings1</relationshipName>
    <type>Lookup</type>
</CustomField>