force-app/main/default/objects/Onboarding__c/fields/Phone_IMEI__c.field-meta.xml
<CustomField>
    <fullName>Phone_IMEI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phone IMEI</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>IT_Asset__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Phone</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>IT_Asset__c</referenceTo>
    <relationshipLabel>Onboardings</relationshipLabel>
    <relationshipName>Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>