force-app/main/default/objects/Onboarding__c/fields/Principal_Clinician__c.field-meta.xml
<CustomField>
    <fullName>Principal_Clinician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principal Clinician</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Worker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Onboardings (Principal Clinician)</relationshipLabel>
    <relationshipName>Onboardings2</relationshipName>
    <type>Lookup</type>
</CustomField>