force-app/main/default/objects/Onboarding__c/fields/Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager__c</fullName>
    <formula>Site__r.Regional_Manager__r.FirstName &amp; &quot; &quot; &amp; Site__r.Regional_Manager__r.LastName</formula>
    <label>Regional Manager</label>
    <type>Text</type>
</CustomField>