force-app/main/default/objects/Onboarding__c/fields/Role_Title__c.field-meta.xml
<CustomField>
    <fullName>Role_Title__c</fullName>
    <description>Employee role title</description>
    <label>Role Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>