force-app/main/default/objects/Onboarding__c/fields/Site_Admin__c.field-meta.xml
<CustomField>
    <fullName>Site_Admin__c</fullName>
    <formula>Site__r.Office_Admin__r.FirstName   + &quot; &quot; +  Site__r.Office_Admin__r.LastName</formula>
    <label>Site Admin</label>
    <type>Text</type>
</CustomField>