force-app/main/default/objects/Onboarding__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Pre-Comm&quot;</defaultValue>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Comm</fullName>
            </value>
            <value>
                <fullName>Post-Comm</fullName>
            </value>
            <value>
                <fullName>Fully Onboarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>