force-app/main/default/objects/Onboarding__c/fields/Telephone_Internet__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Internet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phone Number (IT)</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <filterItems>
            <field>Telephone_Internet__c.User_Active__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>Telephone_Internet__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Phone</value>
        </filterItems>
        <filterItems>
            <field>Telephone_Internet__c.Aircall__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Telephone_Internet__c</referenceTo>
    <relationshipLabel>Onboardings</relationshipLabel>
    <relationshipName>Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>