force-app/main/default/objects/Onboarding__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>