force-app/main/default/objects/Onboarding__c/fields/User_Apex_Run__c.field-meta.xml
<CustomField>
    <fullName>User_Apex_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Apex Run</label>
    <type>Checkbox</type>
</CustomField>