force-app/main/default/objects/Onboarding__c/fields/Work_Day_s__c.field-meta.xml
<CustomField>
    <fullName>Work_Day_s__c</fullName>
    <label>Work Day(s) (FOR PART-TIME ONLY)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>