force-app/main/default/objects/Onboarding__c/validationRules/Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Value</fullName>
    <active>true</active>
    <errorConditionFormula>FTE__c &gt; 1</errorConditionFormula>
    <errorDisplayField>FTE__c</errorDisplayField>
    <errorMessage>FTE cannot exceed 1</errorMessage>
</ValidationRule>