force-app/main/default/objects/Onboarding__c/listViews/Business_Cards_OT.listView-meta.xml
<ListView>
    <fullName>Business_Cards_OT</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Status__c</columns>
    <columns>Email__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Role_Title__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Last_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Site__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Physiotherapy</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>1/2/2021</value>
    </filters>
    <label>Business Cards - OT</label>
    <sharedTo>
        <group>NSW_Admin</group>
    </sharedTo>
</ListView>