force-app/main/default/objects/Onboarding__c/listViews/Copy_of_Upcoming_VIC_New_Starters.listView-meta.xml
<ListView>
    <fullName>Copy_of_Upcoming_VIC_New_Starters</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Email__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Role_Title__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Office__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Office__c</field>
        <operation>equals</operation>
        <value>Mornington,Surrey Hills,Moonee Ponds,Mulgrave,Briar Hill</value>
    </filters>
    <label>Copy of Upcoming VIC New Starters</label>
</ListView>