force-app/main/default/objects/Onboarding__c/listViews/IT_Onboarding.listView-meta.xml
<ListView>
    <fullName>IT_Onboarding</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Role_Title__c</columns>
    <columns>Department__c</columns>
    <columns>Office__c</columns>
    <columns>Email__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Telephone_Internet__c</columns>
    <columns>Site_Admin__c</columns>
    <columns>Site__c</columns>
    <columns>State__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>User__c</columns>
    <columns>Direct_Supervisor_s_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>11/20/2022</value>
    </filters>
    <label>IT Onboarding</label>
</ListView>