force-app/main/default/objects/Onboarding__c/listViews/New_Starters.listView-meta.xml
<ListView>
    <fullName>New_Starters</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Role_Title__c</columns>
    <columns>Internal_Banding__c</columns>
    <columns>Direct_Supervisor__c</columns>
    <columns>State__c</columns>
    <columns>Site__c</columns>
    <columns>Telephone_Internet__c</columns>
    <columns>Laptop_Serial_Number__c</columns>
    <columns>Phone_IMEI__c</columns>
    <columns>User__c</columns>
    <columns>Department__c</columns>
    <columns>Phone_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>10/1/2022</value>
    </filters>
    <label>New Starters</label>
</ListView>