force-app/main/default/objects/Onboarding__c/listViews/NZ_New_starters.listView-meta.xml
<ListView>
    <fullName>NZ_New_starters</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Email__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Role_Title__c</columns>
    <columns>Site__c</columns>
    <columns>Start_Date__c</columns>
    <columns>User__c</columns>
    <columns>Phone_IMEI__c</columns>
    <columns>Laptop_Serial_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>8/23/2021</value>
    </filters>
    <filters>
        <field>Site__c</field>
        <operation>equals</operation>
        <value>Auckland</value>
    </filters>
    <label>NZ New starters</label>
</ListView>