force-app/main/default/objects/Onboarding__c/listViews/QLD_New_starters.listView-meta.xml
<ListView>
    <fullName>QLD_New_starters</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Internal_Banding__c</columns>
    <columns>Email__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Role_Title__c</columns>
    <columns>Site__c</columns>
    <columns>Start_Date__c</columns>
    <columns>User__c</columns>
    <columns>Phone_IMEI__c</columns>
    <columns>Laptop_Serial_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>12/6/2022</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>QLD</value>
    </filters>
    <label>QLD New starters</label>
    <sharedTo>
        <group>HR</group>
        <group>IT</group>
        <group>NSW_Admin</group>
        <group>QLD_Admin</group>
        <group>VIC_Admin</group>
        <group>WA_Admin</group>
    </sharedTo>
</ListView>