force-app/main/default/objects/Onboarding__c/listViews/VIC_New_starters.listView-meta.xml
<ListView>
    <fullName>VIC_New_starters</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Email__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Role_Title__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>VIC</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>5/26/2022</value>
    </filters>
    <label>VIC New starters</label>
    <sharedTo>
        <group>HR</group>
        <group>IT</group>
        <group>NSW_Admin</group>
        <group>QLD_Admin</group>
        <group>VIC_Admin</group>
        <group>WA_Admin</group>
    </sharedTo>
</ListView>